2009-11-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/config_dialog.cpp:
	* qt4/config_dialog.h:
	* qt4/log_slider_tool_bar.cpp:
	* qt4/options.cpp:
	* qt4/options.h:
	* qt4/player_painter.cpp:
	* qt4/player_painter.h:
	* qt4/player_type_dialog.cpp:
	- improved the painting policy of players' card status.
	- added '--show-card' option.
	- fixed duplicated short cut keys.

2009-11-02  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	* qt4/ball_painter.h:
	* qt4/field_canvas.cpp:
	* qt4/field_canvas.h:
	* qt4/main.cpp:
	* qt4/player_painter.cpp:
	* qt4/player_painter.h:
	* rcsslogplayer/parser.cpp:
	* rcsslogplayer/types.cpp:
	* rcsslogplayer/types.h:
	* tool/rcg2xml.cpp:
	- supported v14 features.
	- supported opengl widget.

2009-11-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* m4/qt.m4:
	- improved autoconf macro for Qt.

2009-08-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/main_window.cpp:
	* qt4/player_type_dialog.cpp:
	- fixed header size of table view.

2009-04-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/main_window.cpp:
	- fixed typo.

2009-04-09  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* classic/Makefile.am:
	* configure.ac:
	- supported AX_XAW7 macro.
	- removed variables related to rcssbase.

	* m4/ax_boost_base.m4:
	* m4/ax_boost_program_options.m4:
	* m4/ax_xaw7.m4:
	* m4/qt.m4:
	- replaced symbolic link with hard copy.
	- addec AX_XAW7 macro.

2009-03-23  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	* qt4/qt4.pro:
	- updated a point version. Official release 13.1.1.

2009-03-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* tool/rcgconvert.cpp:
	- fixed compiler warnings.

2009-03-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/disp_holder.cpp:
	* qt4/monitor_server.cpp:
	* qt4/team_graphic.cpp:
	* rcsslogplayer/parser.cpp:
	- applied a gcc-4.4 patch provided by Hedayat Vatankhah.

2008-12-18  Hidehisa Akiyama  <akky@users.sourceforge.jp>
