@@ -1,3 +1,13 @@
+2009-11-05  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* qt4/detail_dialog.cpp:
+	* qt4/detail_dialog.h:
+	- added catch probability information.
+	- added foul probability information.
+
+	* qt4/player_painter.cpp:
+	- added catch probability painting.
+
 2009-11-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* qt4/config_dialog.cpp:
